_generated-doc/2.7/config/quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_configuration]]link:#quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_quarkus.resteasy.multipart.input-part.default-charset]]`link:#quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_quarkus.resteasy.multipart.input-part.default-charset[quarkus.resteasy.multipart.input-part.default-charset]`

[.description]
--
Default charset. 
 Note that the default value is UTF-8 which is different from RESTEasy's default value US-ASCII.
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a| [[quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_quarkus.resteasy.multipart.input-part.default-content-type]]`link:#quarkus-resteasy-multipart-config-group-resteasy-multipart-runtime-config-input-part-config-group_quarkus.resteasy.multipart.input-part.default-content-type[quarkus.resteasy.multipart.input-part.default-content-type]`

[.description]
--
The default content-type.
--|string 
|`text/plain`

|===